<resources>
    <string name="app_name">CarFax</string>
    <string name="call_dealer_btn_text">CALL DEALER</string>
    <string name="location_place_holder">Los Angels, CA</string>
    <string name="mileage_placeholder">39k mi</string>
    <string name="vertical_divider">|</string>
    <string name="price_placeholder">17000</string>
    <string name="dollar_sign">$</string>
    <string name="car_name_placeholder">BMW 2009 I8</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="location">Location</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color">Interior Color</string>
    <string name="drive_type">Drive Type</string>
    <string name="transmission">Transmission</string>
    <string name="body_style">Body Style</string>
    <string name="fuel">Fuel</string>
</resources>
