<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".vehicles.details.VehicleDetailsActivity">



        <ImageView
                android:layout_width="0dp"
                android:layout_height="250dp"
                tools:srcCompat="@tools:sample/avatars[4]"
                android:id="@+id/vehicleImageView"
                android:src="@android:color/holo_green_dark"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="w,16:9"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:text="@string/car_name_placeholder"
                style="@style/CarFaxTheme.VehicleListTextView.Bold"
                android:id="@+id/vehicleTitleTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/vehicleImageView"
                android:layout_marginTop="8dp"
                android:textColorHint="#00000000"/>

        <TextView
                android:text="@string/dollar_sign"
                style="@style/CarFaxTheme.VehicleListTextView"
                android:id="@+id/currencySignTextView"
                app:layout_constraintStart_toStartOf="@+id/vehicleTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/vehicleTitleTextView"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="@string/price_placeholder"
                style="@style/CarFaxTheme.VehicleListTextView"
                android:id="@+id/vehiclePriceTextView"
                app:layout_constraintStart_toEndOf="@+id/currencySignTextView"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/currencySignTextView"/>

        <TextView
                android:text="@string/vertical_divider"
                style="@style/CarFaxTheme.VehicleListTextView"
                android:id="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/vehiclePriceTextView"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/vehiclePriceTextView"/>

        <TextView
                android:text="@string/mileage_placeholder"
                style="@style/CarFaxTheme.VehicleListTextView"
                android:id="@+id/vehicleMileageTextView"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#CECDCD"
                android:id="@+id/horizontalLineView"
                app:layout_constraintTop_toBottomOf="@+id/currencySignTextView"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text="Vehicle Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/horizontalLineView"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/horizontalLineView"/>

        <TextView
                android:text="Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="24dp"
                />

        <TextView
                android:text="Exterior Color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginTop="8dp"/>

        <TextView
                android:text="Interior Color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                />

        <TextView
                android:text="Drive Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                />

        <TextView
                android:text="Transmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                />

        <TextView
                android:text="Body Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                />

        <TextView
                android:text="Fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"/>

        <Button
                android:text="@string/call_dealer_btn_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/callDealerButton"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>

        <TextView
                android:text="@string/location_place_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicleLocationTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                android:layout_marginStart="120dp"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                />

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exteriorColorTextView"
                app:layout_constraintStart_toStartOf="@+id/vehicleLocationTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"/>

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/interiorColorTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/exteriorColorTextView"
                />

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driveTypeTextView"
                app:layout_constraintStart_toStartOf="@+id/interiorColorTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"/>

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transmissionTextView"
                app:layout_constraintStart_toStartOf="@+id/driveTypeTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"/>

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bodyStyleTextView"
                app:layout_constraintStart_toStartOf="@+id/transmissionTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"/>

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fuelTextView"
                app:layout_constraintStart_toStartOf="@+id/bodyStyleTextView"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>